deploy/apps/api/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: vind-box-api-nodeport
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
  selector:
    core.spinoperator.dev/app-name: vind-box-api
