deploy/apps/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: useless-api-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: useless-api
            port:
              number: 80
        path: /
        pathType: Prefix
